Fix selector for z-index: auto

--- a/scss/_search.scss
+++ b/scss/_search.scss
@@ -27,7 +27,7 @@
 }
 
 
-.bb-search-input:focus + .bb-search-btn-input-group button:hover {
+.bb-search-input:focus + .input-group-btn button:hover.bb-search-btn-input-group  {
     z-index: auto;
 }
 
